tests/paczka1/small_fuzzy/44030394.err
Error in line 7: G3SGX A56X 60,9
Error in line 6: fIiABDh S302 27,5
Error in line 1: G3SGX A562 39,8
